// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the CostAllocateFFP component renders correctly renders correctly in editable mode (standard) 1`] = `
<Fragment>
  <h3
    className="subsection--title ds-h3"
  >
    Cost Allocation and Budget for FFY 
    1990
  </h3>
  <table
    className="budget-table"
  >
    <tbody>
      <tr
        className="budget-table--row__header"
      >
        <th
          colSpan="2"
        >
          State Staff
        </th>
        <td
          colSpan="4"
        />
        <th>
          Total cost
        </th>
      </tr>
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "key person (APD Key Personnel)",
              "totalCost": 1002,
              "unitCost": null,
              "units": "100% time",
            },
          ]
        }
      />
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "personnel role",
              "totalCost": 4000,
              "unitCost": 40,
              "units": "0.5 FTE",
            },
          ]
        }
      />
      <tr
        className="budget-table--subtotal budget-table--row__highlight"
      >
        <td />
        <td>
          State Staff Subtotal
        </td>
        <td
          colSpan="4"
        />
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            1006
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--row__header"
      >
        <th
          colSpan="7"
        >
          Other State Expenses
        </th>
      </tr>
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "costly costs",
              "totalCost": 3000,
              "unitCost": null,
              "units": null,
            },
          ]
        }
      />
      <tr
        className="budget-table--subtotal budget-table--row__highlight"
      >
        <td />
        <td>
          Other State Expenses Subtotal
        </td>
        <td
          colSpan="4"
        />
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            1004
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--row__header"
      >
        <th
          colSpan="7"
        >
          Private Contractor
        </th>
      </tr>
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "contractor 2.1",
              "totalCost": 2000,
              "unitCost": null,
              "units": null,
            },
            Object {
              "description": "contractor 2.2",
              "totalCost": 2001,
              "unitCost": 20,
              "units": "20 hours",
            },
          ]
        }
      />
      <tr
        className="budget-table--subtotal budget-table--row__highlight"
      >
        <td />
        <td>
          Private Contractor Subtotal
        </td>
        <td
          colSpan="4"
        />
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            1000
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--subtotal"
      >
        <td
          colSpan="6"
        >
          Activity Total Cost
        </td>
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            1008
          </Dollars>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="data-entry-box ds-u-margin-bottom--5"
  >
    <Instruction
      args={null}
      headingDisplay={
        Object {
          "className": "ds-h4",
          "level": "p",
        }
      }
      reverse={false}
      source="activities.costAllocate.ffp.otherFundingInstruction"
    />
    <DollarField
      label="FFY 1990"
      labelClassName="sr-only"
      onBlur={null}
      onChange={[Function]}
      value={100}
    />
  </div>
  <table
    className="budget-table"
  >
    <tbody>
      <tr
        className="budget-table--subtotal budget-table--row__header"
      >
        <th
          colSpan="6"
        >
          Activity Total Cost
        </th>
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            1008
          </Dollars>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          Other Funding
        </td>
        <td
          colSpan="3"
        />
        <td>
          -
        </td>
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            1005
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--subtotal budget-table--row__highlight"
      >
        <td />
        <td>
          Medicaid Share
        </td>
        <td
          colSpan="4"
        />
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            1003
          </Dollars>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="data-entry-box ds-u-margin-bottom--5"
  >
    <Instruction
      args={null}
      headingDisplay={
        Object {
          "className": "ds-h4",
          "level": "p",
        }
      }
      reverse={false}
      source="activities.costAllocate.ffp.federalStateSplitInstruction"
    />
    <Dropdown
      label="federal-state split"
      labelClassName="sr-only"
      name="ffp-1990"
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "90-10",
            "value": "90-10",
          },
          Object {
            "label": "75-25",
            "value": "75-25",
          },
          Object {
            "label": "50-50",
            "value": "50-50",
          },
        ]
      }
      value="90-10"
    />
  </div>
  <table
    className="budget-table"
  >
    <tbody>
      <tr
        className="budget-table--subtotal budget-table--row__header"
      >
        <th
          colSpan="6"
        >
          Medicaid Share
        </th>
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            1003
          </Dollars>
        </td>
      </tr>
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "Federal Share",
              "totalCost": 90,
              "unitCost": 1003,
              "units": "90%",
            },
            Object {
              "description": "State Share",
              "totalCost": 1007,
              "unitCost": 1003,
              "units": "10%",
            },
          ]
        }
      />
    </tbody>
  </table>
  <div
    className="data-entry-box ds-u-margin-bottom--5"
  >
    <Instruction
      args={null}
      headingDisplay={
        Object {
          "className": "ds-h4",
          "level": "p",
        }
      }
      reverse={false}
      source="activities.costAllocate.ffp.quarterlyFFPInstruction"
    />
    <Connect(CostAllocateFFPQuarterly)
      aKey="key"
      activityIndex={0}
      isViewOnly={false}
      year="1990"
    />
  </div>
  <h3
    className="subsection--title ds-h3"
  >
    Cost Allocation and Budget for FFY 
    1991
  </h3>
  <table
    className="budget-table"
  >
    <tbody>
      <tr
        className="budget-table--row__header"
      >
        <th
          colSpan="2"
        >
          State Staff
        </th>
        <td
          colSpan="4"
        />
        <th>
          Total cost
        </th>
      </tr>
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "key person (APD Key Personnel)",
              "totalCost": 8002,
              "unitCost": null,
              "units": "100% time",
            },
          ]
        }
      />
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "personnel role",
              "totalCost": 9000,
              "unitCost": 90,
              "units": "0.5 FTE",
            },
          ]
        }
      />
      <tr
        className="budget-table--subtotal budget-table--row__highlight"
      >
        <td />
        <td>
          State Staff Subtotal
        </td>
        <td
          colSpan="4"
        />
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            7006
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--row__header"
      >
        <th
          colSpan="7"
        >
          Other State Expenses
        </th>
      </tr>
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "costly costs",
              "totalCost": 9000,
              "unitCost": null,
              "units": null,
            },
          ]
        }
      />
      <tr
        className="budget-table--subtotal budget-table--row__highlight"
      >
        <td />
        <td>
          Other State Expenses Subtotal
        </td>
        <td
          colSpan="4"
        />
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            7004
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--row__header"
      >
        <th
          colSpan="7"
        >
          Private Contractor
        </th>
      </tr>
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "contractor 2.1",
              "totalCost": 6000,
              "unitCost": null,
              "units": null,
            },
            Object {
              "description": "contractor 2.2",
              "totalCost": 6001,
              "unitCost": 60,
              "units": "60 hours",
            },
          ]
        }
      />
      <tr
        className="budget-table--subtotal budget-table--row__highlight"
      >
        <td />
        <td>
          Private Contractor Subtotal
        </td>
        <td
          colSpan="4"
        />
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            7000
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--subtotal"
      >
        <td
          colSpan="6"
        >
          Activity Total Cost
        </td>
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            7008
          </Dollars>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="data-entry-box ds-u-margin-bottom--5"
  >
    <Instruction
      args={null}
      headingDisplay={
        Object {
          "className": "ds-h4",
          "level": "p",
        }
      }
      reverse={false}
      source="activities.costAllocate.ffp.otherFundingInstruction"
    />
    <DollarField
      label="FFY 1991"
      labelClassName="sr-only"
      onBlur={null}
      onChange={[Function]}
      value={200}
    />
  </div>
  <table
    className="budget-table"
  >
    <tbody>
      <tr
        className="budget-table--subtotal budget-table--row__header"
      >
        <th
          colSpan="6"
        >
          Activity Total Cost
        </th>
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            7008
          </Dollars>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          Other Funding
        </td>
        <td
          colSpan="3"
        />
        <td>
          -
        </td>
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            7005
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--subtotal budget-table--row__highlight"
      >
        <td />
        <td>
          Medicaid Share
        </td>
        <td
          colSpan="4"
        />
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            7003
          </Dollars>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="data-entry-box ds-u-margin-bottom--5"
  >
    <Instruction
      args={null}
      headingDisplay={
        Object {
          "className": "ds-h4",
          "level": "p",
        }
      }
      reverse={false}
      source="activities.costAllocate.ffp.federalStateSplitInstruction"
    />
    <Dropdown
      label="federal-state split"
      labelClassName="sr-only"
      name="ffp-1991"
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "90-10",
            "value": "90-10",
          },
          Object {
            "label": "75-25",
            "value": "75-25",
          },
          Object {
            "label": "50-50",
            "value": "50-50",
          },
        ]
      }
      value="50-50"
    />
  </div>
  <table
    className="budget-table"
  >
    <tbody>
      <tr
        className="budget-table--subtotal budget-table--row__header"
      >
        <th
          colSpan="6"
        >
          Medicaid Share
        </th>
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            7003
          </Dollars>
        </td>
      </tr>
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "Federal Share",
              "totalCost": 50,
              "unitCost": 7003,
              "units": "90%",
            },
            Object {
              "description": "State Share",
              "totalCost": 7007,
              "unitCost": 7003,
              "units": "10%",
            },
          ]
        }
      />
    </tbody>
  </table>
  <div
    className="data-entry-box ds-u-margin-bottom--5"
  >
    <Instruction
      args={null}
      headingDisplay={
        Object {
          "className": "ds-h4",
          "level": "p",
        }
      }
      reverse={false}
      source="activities.costAllocate.ffp.quarterlyFFPInstruction"
    />
    <Connect(CostAllocateFFPQuarterly)
      aKey="key"
      activityIndex={0}
      isViewOnly={false}
      year="1991"
    />
  </div>
  <h3
    className="subsection--title ds-h3"
  >
    FFY 
    1990
    -
    1991
     Totals
  </h3>
  <p>
    The total cost of the 
    <strong>
      activity name
    </strong>
     activity is
     
    <strong>
      <Dollars
        long={true}
      >
        500
      </Dollars>
    </strong>
    . Because of other funding of
     
    <strong>
      <Dollars
        long={true}
      >
        300
      </Dollars>
    </strong>
    , the total cost to Medicaid is
     
    <strong>
      <Dollars
        long={true}
      >
        200
      </Dollars>
    </strong>
    . This activity is using a 
    <strong>
      90/10
    </strong>
     funding split, resulting in a federal share of
     
    <strong>
      <Dollars
        long={true}
      >
        100
      </Dollars>
    </strong>
     
    and a 
    test state
     share of
     
    <strong>
      <Dollars
        long={true}
      >
        400
      </Dollars>
    </strong>
    .
  </p>
</Fragment>
`;

exports[`the CostAllocateFFP component renders correctly renders correctly in view-only mode 1`] = `
<Fragment>
  <h3
    className="subsection--title ds-h3"
  >
    Cost Allocation and Budget for FFY 
    1990
  </h3>
  <table
    className="budget-table"
  >
    <tbody>
      <tr
        className="budget-table--row__header"
      >
        <th
          colSpan="2"
        >
          State Staff
        </th>
        <td
          colSpan="4"
        />
        <th>
          Total cost
        </th>
      </tr>
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "key person (APD Key Personnel)",
              "totalCost": 1002,
              "unitCost": null,
              "units": "100% time",
            },
          ]
        }
      />
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "personnel role",
              "totalCost": 4000,
              "unitCost": 40,
              "units": "0.5 FTE",
            },
          ]
        }
      />
      <tr
        className="budget-table--subtotal budget-table--row__highlight"
      >
        <td />
        <td>
          State Staff Subtotal
        </td>
        <td
          colSpan="4"
        />
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            1006
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--row__header"
      >
        <th
          colSpan="7"
        >
          Other State Expenses
        </th>
      </tr>
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "costly costs",
              "totalCost": 3000,
              "unitCost": null,
              "units": null,
            },
          ]
        }
      />
      <tr
        className="budget-table--subtotal budget-table--row__highlight"
      >
        <td />
        <td>
          Other State Expenses Subtotal
        </td>
        <td
          colSpan="4"
        />
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            1004
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--row__header"
      >
        <th
          colSpan="7"
        >
          Private Contractor
        </th>
      </tr>
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "contractor 2.1",
              "totalCost": 2000,
              "unitCost": null,
              "units": null,
            },
            Object {
              "description": "contractor 2.2",
              "totalCost": 2001,
              "unitCost": 20,
              "units": "20 hours",
            },
          ]
        }
      />
      <tr
        className="budget-table--subtotal budget-table--row__highlight"
      >
        <td />
        <td>
          Private Contractor Subtotal
        </td>
        <td
          colSpan="4"
        />
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            1000
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--subtotal"
      >
        <td
          colSpan="6"
        >
          Activity Total Cost
        </td>
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            1008
          </Dollars>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          Other Funding
        </td>
        <td
          colSpan="3"
        />
        <td>
          -
        </td>
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            1005
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--subtotal budget-table--row__highlight"
      >
        <td />
        <td>
          Medicaid Share
        </td>
        <td
          colSpan="4"
        />
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            1003
          </Dollars>
        </td>
      </tr>
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "Federal Share",
              "totalCost": 90,
              "unitCost": 1003,
              "units": "90%",
            },
            Object {
              "description": "State Share",
              "totalCost": 1007,
              "unitCost": 1003,
              "units": "10%",
            },
          ]
        }
      />
    </tbody>
  </table>
  <div
    className="data-entry-box ds-u-margin-bottom--5"
  >
    <Instruction
      args={null}
      headingDisplay={
        Object {
          "className": "ds-h4",
          "level": "p",
        }
      }
      reverse={false}
      source="activities.costAllocate.ffp.quarterlyFFPInstruction"
    />
    <Connect(CostAllocateFFPQuarterly)
      aKey="key"
      activityIndex={0}
      isViewOnly={true}
      year="1990"
    />
  </div>
  <h3
    className="subsection--title ds-h3"
  >
    Cost Allocation and Budget for FFY 
    1991
  </h3>
  <table
    className="budget-table"
  >
    <tbody>
      <tr
        className="budget-table--row__header"
      >
        <th
          colSpan="2"
        >
          State Staff
        </th>
        <td
          colSpan="4"
        />
        <th>
          Total cost
        </th>
      </tr>
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "key person (APD Key Personnel)",
              "totalCost": 8002,
              "unitCost": null,
              "units": "100% time",
            },
          ]
        }
      />
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "personnel role",
              "totalCost": 9000,
              "unitCost": 90,
              "units": "0.5 FTE",
            },
          ]
        }
      />
      <tr
        className="budget-table--subtotal budget-table--row__highlight"
      >
        <td />
        <td>
          State Staff Subtotal
        </td>
        <td
          colSpan="4"
        />
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            7006
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--row__header"
      >
        <th
          colSpan="7"
        >
          Other State Expenses
        </th>
      </tr>
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "costly costs",
              "totalCost": 9000,
              "unitCost": null,
              "units": null,
            },
          ]
        }
      />
      <tr
        className="budget-table--subtotal budget-table--row__highlight"
      >
        <td />
        <td>
          Other State Expenses Subtotal
        </td>
        <td
          colSpan="4"
        />
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            7004
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--row__header"
      >
        <th
          colSpan="7"
        >
          Private Contractor
        </th>
      </tr>
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "contractor 2.1",
              "totalCost": 6000,
              "unitCost": null,
              "units": null,
            },
            Object {
              "description": "contractor 2.2",
              "totalCost": 6001,
              "unitCost": 60,
              "units": "60 hours",
            },
          ]
        }
      />
      <tr
        className="budget-table--subtotal budget-table--row__highlight"
      >
        <td />
        <td>
          Private Contractor Subtotal
        </td>
        <td
          colSpan="4"
        />
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            7000
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--subtotal"
      >
        <td
          colSpan="6"
        >
          Activity Total Cost
        </td>
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            7008
          </Dollars>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          Other Funding
        </td>
        <td
          colSpan="3"
        />
        <td>
          -
        </td>
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            7005
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--subtotal budget-table--row__highlight"
      >
        <td />
        <td>
          Medicaid Share
        </td>
        <td
          colSpan="4"
        />
        <td
          className="budget-table--number"
        >
          <Dollars
            long={true}
          >
            7003
          </Dollars>
        </td>
      </tr>
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "Federal Share",
              "totalCost": 50,
              "unitCost": 7003,
              "units": "90%",
            },
            Object {
              "description": "State Share",
              "totalCost": 7007,
              "unitCost": 7003,
              "units": "10%",
            },
          ]
        }
      />
    </tbody>
  </table>
  <div
    className="data-entry-box ds-u-margin-bottom--5"
  >
    <Instruction
      args={null}
      headingDisplay={
        Object {
          "className": "ds-h4",
          "level": "p",
        }
      }
      reverse={false}
      source="activities.costAllocate.ffp.quarterlyFFPInstruction"
    />
    <Connect(CostAllocateFFPQuarterly)
      aKey="key"
      activityIndex={0}
      isViewOnly={true}
      year="1991"
    />
  </div>
  <h3
    className="subsection--title ds-h3"
  >
    FFY 
    1990
    -
    1991
     Totals
  </h3>
  <p>
    The total cost of the 
    <strong>
      activity name
    </strong>
     activity is
     
    <strong>
      <Dollars
        long={true}
      >
        500
      </Dollars>
    </strong>
    . Because of other funding of
     
    <strong>
      <Dollars
        long={true}
      >
        300
      </Dollars>
    </strong>
    , the total cost to Medicaid is
     
    <strong>
      <Dollars
        long={true}
      >
        200
      </Dollars>
    </strong>
    . This activity is using a 
    <strong>
      90/10
    </strong>
     funding split, resulting in a federal share of
     
    <strong>
      <Dollars
        long={true}
      >
        100
      </Dollars>
    </strong>
     
    and a 
    test state
     share of
     
    <strong>
      <Dollars
        long={true}
      >
        400
      </Dollars>
    </strong>
    .
  </p>
</Fragment>
`;

exports[`the CostAllocateFFP component renders internal cost summary rows component 1`] = `
Array [
  <tr
    key="item 1"
  >
    <td />
    <td>
      item 1
    </td>
    <td
      className="budget-table--number"
    >
      <Dollars
        long={true}
      >
        10
      </Dollars>
    </td>
    <td
      className="budget-table--number ds-u-padding--0"
    >
      ×
    </td>
    <td
      className="budget-table--number ds-u-text-align--left"
    >
      10 items
    </td>
    <td
      className="budget-table--number"
    >
      =
    </td>
    <td
      className="budget-table--number"
    >
      <Dollars
        long={true}
      >
        100
      </Dollars>
    </td>
  </tr>,
  <tr
    key="item 2"
  >
    <td />
    <td>
      item 2
    </td>
    <td
      className="budget-table--number"
    />
    <td
      className="budget-table--number ds-u-padding--0"
    />
    <td
      className="budget-table--number ds-u-text-align--left"
    />
    <td
      className="budget-table--number"
    />
    <td
      className="budget-table--number"
    >
      <Dollars
        long={true}
      >
        200
      </Dollars>
    </td>
  </tr>,
]
`;
